[package]
name = "ai_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core library for Sentinel"
repository = "https://github.com/yourname/sentinel"

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
