[package]
name = "ai_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core libs for Sentinel (config, KV store, logging, job types)"

[dependencies]
anyhow = "1"
bincode = "1"
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"           # <- added
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
